--- a/monthly-reports.yml
+++ b/monthly-reports.yml
@@ -1,7 +1,7 @@
 
 name: Postgres DB Monthly Report
 schedules:
-- cron: "*/3 * * * *"
+- cron: "0 0 1 * *"
   displayName: Monthly reports
   branches:
     include:
