--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -144,7 +144,7 @@ jobs:
           CC_ADDRESS: 'Probate.Docs@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v15-prod"
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'Grants-Issued-Yesterday-Extract Daily Report'
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-stopsappliedtogrants:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-stopsappliedtogrants.sh
@@ -152,7 +152,7 @@ jobs:
           CC_ADDRESS: 'Probate.Docs@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v15-prod"
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'Stops-applied-to-Grants Daily Report'
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguagedivorceissued:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguagedivorceissued.sh
@@ -160,7 +160,7 @@ jobs:
           CC_ADDRESS: 'Isabel.syred@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v15-prod"
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'Welsh-Language-Divorce-Issued Daily Report'
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguageissued:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguageissued.sh
@@ -168,7 +168,7 @@ jobs:
           CC_ADDRESS: 'helen.smith6@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v15-prod"
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'Welsh-Language-SSCS-Issued Daily Report'
     steps:
       - task: AzureCLI@2
