SDT-209: Set working directory
Set workingDirectory input parameter of Bash task in pipeline yaml file.  This should permit the use of relative paths to the query scripts in the shell script.

--- a/amdashboard-sdt.yml
+++ b/amdashboard-sdt.yml
@@ -21,7 +21,8 @@ jobs:
         displayName: 'Generate and send SDT Stats'
         name: generateSendSdtStats
         inputs:
-          filePath: './scripts/amdashboard/sdt/amdashboard-sdt-stats.sh'
+          filePath: '$(System.DefaultWorkingDirectory)/scripts/amdashboard/sdt/amdashboard-sdt-stats.sh'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/scripts/amdashboard/sdt'
         env:
           AZURE_DB_HOSTNAME: $(civil-sdt-POSTGRES-HOST-V15)
           AZURE_DB_USERNAME: $(civil-sdt-POSTGRES-USER-V15)
