--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -7,6 +7,17 @@ schedules:
     include:
     - master
   always: true
+  parameters:
+    scheduleType: daily-2am
+
+- cron: "0 17 * * *"
+  displayName: Private Law Case Status at 5 PM
+  branches:
+    include:
+      - master
+  always: true
+  parameters:
+    scheduleType: daily-5pm
 
 trigger: none
 pr: none
@@ -17,6 +28,7 @@ variables:
 
 jobs:
   - job: rd_judicial
+    condition: eq(parameters.scheduleType, 'daily-2am')
     pool:
       name: 'hmcts-ss-prod'
     steps:
@@ -46,6 +58,7 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
 
   - job: rd_elinks_judicial
+    condition: eq(parameters.scheduleType, 'daily-2am')
     pool:
       name: 'hmcts-ss-prod'
     steps:
@@ -75,6 +88,7 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
 
   - job: rd_locationgit
+    condition: eq(parameters.scheduleType, 'daily-2am')
     pool:
       name: 'hmcts-ss-prod'
     steps:
@@ -104,6 +118,7 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
 
   - job: rd_commondata
+    condition: eq(parameters.scheduleType, 'daily-2am')
     pool:
       name: 'hmcts-ss-prod'
     steps:
@@ -133,6 +148,7 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
 
   - job: ccd_daily
+    condition: eq(parameters.scheduleType, 'daily-2am')
     pool:
       name: 'hmcts-ss-prod'
     strategy:
@@ -170,13 +186,6 @@ jobs:
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'Welsh-Language-SSCS-Issued Daily Report'
-        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Privatelawcasestatus:
-          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-privatelawcasestatus.sh
-          TO_ADDRESS: ' katie.dean5@justice.gov.uk, Cheryl.chesters@justice.gov.uk, Jason.Llewelyn@Justice.gov.uk'
-          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
-          AZURE_DB: 'ccd_data_store'
-          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
-          SUBJECT: 'Private Law Case Status Daily Report'
     steps:
       - task: AzureCLI@2
         displayName: 'Get access token'
@@ -208,4 +217,51 @@ jobs:
           filePath: 'email_report.sh'
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+          CONTAINER_NAME: 'daily'
+  
+  - job: ccd_privatelawcasestatus_5pm
+    condition: eq(parameters.scheduleType, 'daily-5pm')
+    pool:
+      name: 'hmcts-ss-prod'
+    strategy:
+      maxParallel: 1
+      matrix:
+        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Privatelawcasestatus:
+          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-privatelawcasestatus.sh
+          TO_ADDRESS: 'katie.dean5@justice.gov.uk,Cheryl.chesters@justice.gov.uk,Jason.Llewelyn@Justice.gov.uk'
+          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
+          AZURE_DB: 'ccd_data_store'
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
+          SUBJECT: 'Private Law Case Status Daily Report'
+    steps:
+      - task: AzureCLI@2
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptType: bash
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@2
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'email-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: AzureKeyVault@2
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'ccd-prod'
+          SecretsFilter: 'timdaexedata-storageaccount'
+          RunAsPreJob: false
+      - task: Bash@3
+        inputs:
+          filePath: 'email_report.sh'
+        env:
+          SENDGRID_APIKEY: $(email-db-reporting-api-key)
           CONTAINER_NAME: 'daily'
