--- a/daily-reports-5pm.yml
+++ b/daily-reports-5pm.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Privatelawcasestatus:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-privatelawcasestatus.sh
-          TO_ADDRESS: 'katie.dean5@justice.gov.uk,Cheryl.chesters@justice.gov.uk,Jason.Llewelyn@Justice.gov.uk'
+          TO_ADDRESS: 'privatefamilylawproject@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
