--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -172,14 +172,14 @@ jobs:
           SUBJECT: 'Welsh-Language-SSCS-Issued Daily Report'
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etOnlineSubmissions:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etOnlineSubmissions.sh
-          TO_ADDRESS: 'Harpreet.Jhita@justice.gov.uk,daniel.thompson@justice.gov.uk'
+          TO_ADDRESS: 'Harpreet.Jhita@justice.gov.uk,etreform@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'ET Online Claim Submission Report'
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etApplicationSubmissions:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-etApplicationSubmissions.sh
-          TO_ADDRESS: 'Harpreet.Jhita@justice.gov.uk,daniel.thompson@justice.gov.uk'
+          TO_ADDRESS: 'Harpreet.Jhita@justice.gov.uk,etreform@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
