ccd report retrycount

--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -210,3 +210,4 @@ jobs:
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           CONTAINER_NAME: 'daily'
+        retryCountOnTaskFailure: '3'
