--- a/amdashboard-sdt.yml
+++ b/amdashboard-sdt.yml
@@ -3,20 +3,33 @@ name: Test AM Dashboard Daily Updates
 trigger: none
 pr: none
 variables:
-  serviceConnection: 'DCD-CFTAPPS-STG'
+  serviceConnection: 'Prod-DB-Reporting'
 
 jobs:
   - job: sdt_stats
     pool:
-      name: 'hmcts-sds-ptl'
+      name: 'hmcts-ss-prod'
     steps:
+      - task: AzureCli@2
+        displayName: 'Get Access Token'
+        name: getAccessToken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptType: bash
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
       - task: AzureKeyVault@2
         displayName: 'Get Secrets'
         name: getSecrets
         inputs:
           azureSubscription: $(serviceConnection)
-          KeyVaultName: 'civil-sdt-aat'
-          SecretsFilter: 'civil-sdt-POSTGRES-HOST-V15,civil-sdt-POSTGRES-USER-V15,civil-sdt-POSTGRES-PASS-V15,bais-sftp-server,bais-sftp-server-port,bais-sftp-server-username,bais-sftp-server-ssh-key'
+          KeyVaultName: 'civil-sdt-prod'
+          SecretsFilter: 'civil-sdt-POSTGRES-HOST-V15,bais-sftp-server,bais-sftp-server-port,bais-sftp-server-username,bais-sftp-server-ssh-key'
       - task: Bash@3
         displayName: 'Generate and send SDT Stats'
         name: generateSendSdtStats
@@ -25,8 +38,7 @@ jobs:
           workingDirectory: '$(System.DefaultWorkingDirectory)/scripts/amdashboard/sdt'
         env:
           AZURE_DB_HOSTNAME: $(civil-sdt-POSTGRES-HOST-V15)
-          AZURE_DB_USERNAME: $(civil-sdt-POSTGRES-USER-V15)
-          PGPASSWORD: $(civil-sdt-POSTGRES-PASS-V15)
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           BAIS_SFTP_SERVER: $(bais-sftp-server)
           BAIS_SFTP_SERVER_PORT: $(bais-sftp-server-port)
           BAIS_SFTP_SERVER_USERNAME: $(bais-sftp-server-username)
