adding retry logic as report did not run-DTSPO-18001

--- a/daily-reports-5pm.yml
+++ b/daily-reports-5pm.yml
@@ -55,3 +55,4 @@ jobs:
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           CONTAINER_NAME: 'daily'
+        retryCountOnTaskFailure: '3'
