--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -1,7 +1,7 @@
 
 name: Postgres DB Daily Reports
 schedules:
-- cron: "10 40 * * *"
+- cron: "* /10 * * *"
   displayName: Daily reports
   branches:
     include:
