--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -1,7 +1,7 @@
 
 name: Postgres DB Daily Reports
 schedules:
-- cron: "* /10 * * *"
+- cron: "0 2 * * *"
   displayName: Daily reports
   branches:
     include:
@@ -90,7 +90,7 @@ jobs:
             set -ex
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+            echo "##vso[task.setvariable variable=ç]$output"
       - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
@@ -136,6 +136,29 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
+      - task: AzureKeyVault@2
+        displayName: 'Get Secrets'
+        name: getSecrets
+        inputs:
+          serviceConnection: 'DCD-CNP-DEV'
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'rd-aat'
+          SecretsFilter: 'OAUTH2_CLIENT_ID,OAUTH2_CLIENT_SECRET,idam-rd-system-user-username,idam-rd-system-user-password,user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-HOST,user-profile-api-POSTGRES-DATABASE,user-profile-api-POSTGRES-PASS'
+      - task: Bash@3
+        displayName: 'Generate and send Bearer token'
+        name: generateSendBearer
+        inputs:
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
+        env:
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
+          AZURE_HOSTNAME: $(user-profile-api-POSTGRES-HOST)
+          AZURE_DB: $(user-profile-api-POSTGRES-DATABASE)
+          AZURE_PASS: $(user-profile-api-POSTGRES-PASS)
+          idam-rd-system-user: $(idam-rd-system-user)
+          idam-rd-system-user-password: $(idam-rd-system-user-password)
+          OAUTH2_CLIENT_ID: $(OAUTH2_CLIENT_ID)
+          OAUTH2_CLIENT_SECRET: $(OAUTH2_CLIENT_SECRET)
+          PGPASSWORD : $(user-profile-api-POSTGRES-PASS)
       - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
