--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -20,28 +20,6 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
-      - task: AzureKeyVault@2
-        displayName: 'Get Secrets'
-        name: getSecrets
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'rd-prod'
-          SecretsFilter: 'OAUTH2-CLIENT-ID,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password,user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-HOST,user-profile-api-POSTGRES-DATABASE,user-profile-api-POSTGRES-PASS'
-      - task: Bash@3
-        displayName: 'Generate and send Bearer token'
-        name: generateSendBearer
-        inputs:
-          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
-        env:
-          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
-          AZURE_HOSTNAME: $(user-profile-api-POSTGRES-HOST)
-          AZURE_DB: $(user-profile-api-POSTGRES-DATABASE)
-          AZURE_PASS: $(user-profile-api-POSTGRES-PASS)
-          idam-rd-system-user: $(idam-rd-system-user)
-          idam-rd-system-user-password: $(idam-rd-system-user-password)
-          OAUTH2_CLIENT_ID: $(OAUTH2-CLIENT-ID)
-          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
-          PGPASSWORD : $(user-profile-api-POSTGRES-PASS)
       - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
@@ -67,3 +45,26 @@ jobs:
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           ALL_USERS_FLAG: 1
+      - task: AzureKeyVault@2
+        displayName: 'Get Secrets'
+        name: getSecrets
+        inputs:
+          azureSubscription: 'DCD-CNP-Prod'
+          KeyVaultName: 'rd-prod'
+          SecretsFilter: 'OAUTH2-CLIENT-ID,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password,user-profile-api-POSTGRES-USER,user-profile-api-POSTGRES-HOST,user-profile-api-POSTGRES-DATABASE,user-profile-api-POSTGRES-PASS'
+      - task: Bash@3
+        displayName: 'Generate and send Bearer token'
+        name: generateSendBearer
+        inputs:
+          filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
+        env:
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
+          AZURE_HOSTNAME: $(user-profile-api-POSTGRES-HOST)
+          AZURE_DB: $(user-profile-api-POSTGRES-DATABASE)
+          AZURE_PASS: $(user-profile-api-POSTGRES-PASS)
+          idam-rd-system-user: $(idam-rd-system-user)
+          idam-rd-system-user-password: $(idam-rd-system-user-password)
+          OAUTH2_CLIENT_ID: $(OAUTH2-CLIENT-ID)
+          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
+
+
