--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -64,7 +64,7 @@ jobs:
           AZURE_PASS: $(user-profile-api-POSTGRES-PASS)
           idam-rd-system-user: $(idam-rd-system-user)
           idam-rd-system-user-password: $(idam-rd-system-user-password)
-          OAUTH2_CLIENT_ID: $(OAUTH2-CLIENT-ID)
-          OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
+          OAUTH2-CLIENT-ID: $(OAUTH2-CLIENT-ID)
+          OAUTH2-CLIENT-SECRET: $(OAUTH2-CLIENT-SECRET)
 
 
