--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -62,4 +62,31 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           ALL_USERS_FLAG: 1
 
-
+  - job: rd_locationgit
+    pool:
+      name: 'hmcts-ss-prod'
+    steps:
+      - task: AzureCLI@2
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptType: bash
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@2
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: Bash@3
+        inputs:
+          filePath: './scripts/daily/rd-location-ref-api-postgres-db-prod-dbrdlocationref-daily-locationrefdatarowcount.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
