changes to run cron job to test manually on prod

--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -11,7 +11,7 @@ schedules:
 trigger: none
 pr: none
 variables:
-  serviceConnection: 'Prod-DB-Reporting'
+  serviceConnection: 'DCD-CNP-DEV'
   FROM_ADDRESS: 'db-reporting@mail-db-reporting-prod.platform.hmcts.net'
   FAILURE_ADDRESS: 'sabina.sharangdhar@hmcts.net' # to be verified
 
@@ -62,31 +62,3 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           ALL_USERS_FLAG: 1
 
-  - job: rd_locationgit
-    pool:
-      name: 'hmcts-ss-prod'
-    steps:
-      - task: AzureCLI@2
-        displayName: 'Get access token'
-        name: gettoken
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: 'inlineScript'
-          inlineScript: |
-            #!/bin/bash
-            set -ex
-            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
-            echo $output
-            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          KeyVaultName: 'sendgridprod'
-          SecretsFilter: 'hmcts-db-reporting-api-key'
-          RunAsPreJob: false
-      - task: Bash@3
-        inputs:
-          filePath: './scripts/daily/rd-location-ref-api-postgres-db-prod-dbrdlocationref-daily-locationrefdatarowcount.sh'
-        env:
-          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
