--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -11,7 +11,7 @@ schedules:
 trigger: none
 pr: none
 variables:
-  serviceConnection: 'DCD-CNP-DEV'
+  serviceConnection: 'DCD-CNP-PROD'
   FROM_ADDRESS: 'db-reporting@mail-db-reporting-prod.platform.hmcts.net'
   FAILURE_ADDRESS: 'sabina.sharangdhar@hmcts.net' # to be verified
 
@@ -37,15 +37,16 @@ jobs:
         displayName: 'Get Secrets'
         name: getSecrets
         inputs:
-          azureSubscription: 'DCD-CNP-DEV'
+          azureSubscription: 'DCD-CNP-PROD'
           KeyVaultName: 'rd-aat'
-          SecretsFilter: 'OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
+          SecretsFilter: 'user-profile-api-POSTGRES-USER,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
       - task: Bash@3
         displayName: 'Generate and send Bearer token'
         name: generateSendBearer
         inputs:
           filePath: './scripts/daily/rd-userprofile-api-postgres-db-prod-dbuserprofile-daily-suspendedusercomparewithidam.sh'
         env:
+          AZURE_DB_USERNAME: $(user-profile-api-POSTGRES-USER)
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
