changes to run cron job to test manually on prod

--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -38,7 +38,7 @@ jobs:
         name: getSecrets
         inputs:
           azureSubscription: 'DCD-CNP-PROD'
-          KeyVaultName: 'rd-aat'
+          KeyVaultName: 'rd-prod'
           SecretsFilter: 'user-profile-api-POSTGRES-USER,OAUTH2-CLIENT-SECRET,idam-rd-system-user-username,idam-rd-system-user-password'
       - task: Bash@3
         displayName: 'Generate and send Bearer token'
