--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -20,6 +20,14 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
+      - task: AzureKeyVault@2
+        inputs:
+          azureSubscription: $(serviceConnection)
+          eyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          runAsPreJob: false
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
       - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
@@ -45,5 +53,6 @@ jobs:
           OAUTH2_CLIENT_SECRET: $(OAUTH2-CLIENT-SECRET)
           USERNAME: $(idam-rd-system-user-username)
           SYSPASS: $(idam-rd-system-user-password)
+          ALL_USERS_FLAG: 1
 
 
