--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -154,6 +154,13 @@ jobs:
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           SUBJECT: 'Stops-applied-to-Grants Daily Report'
+        ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-inactivecasefordormant:
+          QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-inactivecasefordormant.sh
+          TO_ADDRESS: 'probate-inactive-case-aaaanoqxnyiwmzds6yxsvvbham@moj.org.slack.com'
+          AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v15-prod.postgres.database.azure.com'
+          AZURE_DB: 'ccd_data_store'
+          AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
+          SUBJECT: 'Inactive-Case-For-Dormant Daily Report'
         ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguagedivorceissued:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v15-prod-ccd_data_store-daily-Welshlanguagedivorceissued.sh
           TO_ADDRESS: 'Kate.Pearce@justice.gov.uk'
