--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -23,12 +23,19 @@ jobs:
       - task: AzureKeyVault@2
         displayName: 'Access reporting vault'
         inputs:
-          azureSubscription: $(serviceConnection)
+          azureSubscription: 'Prod-DB-Reporting'
           eyVaultName: 'sendgridprod'
           SecretsFilter: 'hmcts-db-reporting-api-key'
-          runAsPreJob: false
+          RunAsPreJob: false
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+      - task: Bash@3
+        inputs:
+          filePath: 'email_report.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+          CONTAINER_NAME: 'daily'
+          retryCountOnTaskFailure: '3'
       - task: AzureCLI@2
         displayName: 'Generate Password token'
         name: gettoken
